# ExperimentComparator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  icon_prompt.txt  index.html  package-lock.json  package.json  start.sh  vite.config.ts
.cursor/rules/: react.mdc
.github/workflows/: build.yml  release.yml  test-build.yml
docs/: BUILD_AND_RELEASE.md  INSTALLATION.md
scripts/: release.sh  update-version.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AnalysisView.tsx  CacheManagement.tsx  ComparisonView.tsx  FolderDropzone.tsx  FolderSelection.tsx  HistoryJsonModal.tsx  HistoryManagement.tsx  HistoryPanel.tsx  ImageComparisonGrid.tsx  MainLayout.tsx  ProgressIndicator.tsx  SafeImage.tsx  SideDrawer.tsx  ValidationResults.tsx
src/hooks/: useAppState.ts  useInitializeApp.ts
src/pages/: ComparisonPage.tsx  FolderSelectionPage.tsx  ValidationPage.tsx  index.ts
src/router/: index.tsx
src/store/: appStore.ts  index.ts  selectors.ts  types.ts
src/store/actions/: cacheActions.ts  folderActions.ts  historyActions.ts  progressActions.ts
src/types/: index.ts
src/utils/: errorDialog.ts  fileCache.ts  history.ts  index.ts  optimizedFileCache.ts  version.ts
