[package]
name = "experiment-comparator"
version = "1.0.3"
description = "A modern desktop application for comparing machine learning model experiment results"
authors = ["chouheiwa"]
license = "MIT"
repository = "https://github.com/chouheiwa/ExperimentComparator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "protocol-asset", "fs-exists", "window-unminimize", "dialog-save", "fs-write-file", "window-show", "shell-open", "window-unmaximize", "fs-create-dir", "window-hide", "window-close", "fs-remove-file", "fs-rename-file", "fs-read-dir", "fs-copy-file", "fs-read-file", "window-start-dragging", "window-minimize", "path-all", "fs-remove-dir", "dialog-open", "window-maximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
imageproc = "0.23"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
