[package]
name = "experiment-comparator"
version = "1.0.3"
description = "A modern desktop application for comparing machine learning model experiment results"
authors = ["chouheiwa"]
license = "MIT"
repository = "https://github.com/chouheiwa/ExperimentComparator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
imageproc = "0.23"
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
default = []
